# vvsu-nlp

./: .gitignore  lab1.ipynb  lab2.ipynb  lab22.ipynb  lab2_a.ipynb  lab5.ipynb  pyproject.toml
